<resources>
    <string name="app_name">Rumah Rahil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Beranda</string>
    <string name="title_kelas">Kelas</string>
    <string name="title_profile">Profile</string>
    <string name="title_video">Video</string>
    <string name="title_tes">Tes</string>

    <string name="title_onboarding_1">Selamat Datang di Rumah Rahil Education !</string>
    <string name="description_onboarding_1">Tempat dimana anda dapat mendapatkan bimbingan dalam pelajaran yang anda butuhkan</string>

    <string name="title_onboarding_2">Uji kemampuan anda dengan tes</string>
    <string name="description_onboarding_2">Anda dapat mengukur kompetensi pengetahuan anda dengan mengikuti tes yang disediakan</string>

    <string name="title_onboarding_3">Dapatkan guru privat dan bimbingan belajar</string>
    <string name="description_onboarding_3">Dapatkan guru secara eksklusif untuk membantu anda dalam meningkatkan perkembangan dalam belajar</string>
    <string name="rumah_rahil_education">Rumah Rahil Education</string>
    <string name="next">next</string>

    <string name="welcome_back">Selamat datang!</string>
    <string name="description_welcome">Silahkan isi data berikut untuk masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa kata sandi?</string>
    <string name="or_connect_using">Atau dengan</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="sign_up">Daftar</string>
    <string name="log_in">Masuk</string>
    <string name="let_s_get_started">Lets Get Started!</string>
    <string name="desc_register">Silahkan lengkapi data pada form dibawah</string>
    <string name="nama">Nama</string>
    <string name="phone">Nomor HP</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="register">Buat</string>
    <string name="back_to_login">Back to login</string>
    <string name="illustration_login">Ilustrasi Login</string>

    <string name="halo">Halo,</string>
    <string name="username">Alif Alamsyah</string>
    <string name="profil">Profil</string>
    <string name="search">Search</string>
    <string name="tes_online">Tes Online</string>
    <string name="sekarang_yuk">Sekarang Yuk !</string>
    <string name="mulai">Mulai</string>
    <string name="banner_kid">Banner Kid</string>
    <string name="kelas_terakhir">Kelas yang terakhir dilihat</string>
    <string name="matematika_dasar">Matematika Dasar</string>
    <string name="waktu_45_menit">45 Menit</string>
    <string name="play">Play</string>
    <string name="book_icon">Book Icon</string>
    <string name="ikut_bimbingan_belajar">Ikut bimbingan belajar</string>
    <string name="video_banner">Video Banner</string>
    <string name="rumah_rahil">Rumah Rahil</string>
    <string name="deskripsi_rahil">Rumah Rahil adalah salah satu tempat yang menyediakan fasilitas bimbingan belajar untuk anak sekolah.</string>
    <string name="daftar">Daftar</string>
    <string name="ilustrasi_tes">Ilustrasi Kategori Tes</string>
    <string name="back_to_home_test">Image Back Home Test</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="kelas">Kelas</string>
    <string name="mapel">Mapel</string>
    <string name="bab">Bab</string>
    <string name="paket">Paket</string>
    <string name="pilih_jenjang">Pilih Jenjang</string>
    <string name="desc_tesonline">Tes Online merupakan salah satu fitur dimana siswa dapat mengukur sejauh mana kompetensi pribadi dari kumpulan soal yang telah disediakan.</string>
    <string name="mulai_ujian">Mulai Ujian?</string>
    <string name="selesai_ujian">Selesai Ujian?</string>
    <string name="message_dialog_finish">Jawaban anda akan kami rekap</string>
    <string name="message_dialog_teskategori">Kamu tidak akan bisa keluar sebelum menyelesaikan tes yang diberikan.</string>
    <string name="positive_dialog">Ya</string>
    <string name="negative_dialog">Tidak</string>
    <string name="sd">SD</string>
    <string name="ilustrasi_tes_sd">Ilustrasi Tes SD</string>
    <string name="smp">SMP</string>
    <string name="sma">SMA</string>
    <string name="dinas">DINAS</string>

    <string name="setting">Setting</string>
    <string name="profile_email">alamsyaah1198@gmail.com</string>
    <string name="profile_name">Alif Alamsyah Yudhanto</string>
    <string name="profile_username">alamsyaah</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="general">General</string>
    <string name="username_profile">Username</string>
    <string name="fullname_profile">Full Name</string>
    <string name="password_profile">Password</string>
    <string name="save_change">Save Change</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">Apakah Anda Yakin Ingin Keluar?</string>
    <string name="first_number">1</string>
    <string name="from">dari</string>
    <string name="last_number">50</string>
    <string name="countdown">01:59</string>
    <string name="next_question">Selanjutnya</string>
    <string name="previous_question">Sebelumnya</string>
    <string name="question">Siapakah pencipta bahasa pemrograman pertama kali?</string>
    <string name="option_answer_text">Dennis Ritchie</string>
    <string name="title_activity_first_tes">FirstTesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>