<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.rumahrahil.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_video"
        android:name="com.example.rumahrahil.fragments.VideoFragment"
        android:label="@string/title_video"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/navigation_tes"
        android:name="com.example.rumahrahil.fragments.TesFragment"
        android:label="@string/title_tes"
        tools:layout="@layout/fragment_tes" />

    <fragment
        android:id="@+id/navigation_kelas"
        android:name="com.example.rumahrahil.fragments.KelasFragment"
        android:label="@string/title_kelas"
        tools:layout="@layout/fragment_kelas" />

</navigation>