<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tes.TesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:src="@drawable/ilustrasi_tes"
            android:contentDescription="@string/ilustrasi_tes" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tes_online"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/desc_tesonline"
            android:textColor="@color/black" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilih_jenjang"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <include layout="@layout/item_jenjang_tes" />

    </LinearLayout>

</ScrollView>