<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Login.LoginActivity">

    <ImageView
        android:id="@+id/iv_ilustrasi_login"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/ilustrasi_login"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_wb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/iv_ilustrasi_login"
        android:text="@string/welcome_back" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_descwb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_welcome"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_wb"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        app:helperTextTextColor="@color/md_blue_500"
        app:boxStrokeColor="@color/md_blue_500"
        app:layout_constraintTop_toBottomOf="@id/tv_descwb">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        app:boxStrokeColor="@color/md_blue_500"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/til_email_login">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_forgotpw_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/til_password_login"
        app:layout_constraintEnd_toEndOf="@id/til_password_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit_login"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/button_blue_login"
        app:layout_constraintTop_toBottomOf="@id/til_password_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="25dp"
        android:text="@string/log_in" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_connect_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_connect_using"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:textColor="@color/md_grey_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_submit_login" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:id="@+id/btn_facebook_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/facebook"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:icon="@drawable/ic_facebook"
        app:iconSize="15dp"
        android:backgroundTint="@color/button_blue_fb"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_google_login"
        app:layout_constraintTop_toBottomOf="@id/tv_connect_login" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:id="@+id/btn_google_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/google"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:icon="@drawable/ic_google_plus"
        app:iconSize="15dp"
        android:backgroundTint="@color/button_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_facebook_login"
        app:layout_constraintTop_toBottomOf="@id/tv_connect_login" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_donthaveacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_gotosignup_login" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_gotosignup_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/md_blue_500"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_donthaveacc"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>