<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#F2F8FC"
    tools:context=".profile.ProfileActivity">

    <ImageButton
        android:id="@+id/back_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp"
        android:background="@drawable/ic_baseline_arrow_back"
        android:contentDescription="@string/profil" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/lnr_profile"
        android:layout_below="@id/back_profile"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="44dp"
            android:background="@drawable/home_profile"
            android:contentDescription="@string/profil" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_username"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_email"
                android:textSize="16sp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/edit_profile"
                android:backgroundTint="@color/white"
                app:strokeColor="@android:color/darker_gray"
                app:strokeWidth="1dp"
                app:cornerRadius="20dp"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lnr_profile"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/profile_custom_background"
        android:padding="16dp"
        >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general"
            android:textStyle="bold"
            android:textSize="20sp"
            />



    </LinearLayout>

</RelativeLayout>