<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".login.RegisterActivity">

    <ImageView
        android:id="@+id/btn_btologin_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_baseline_arrow_back"
        android:contentDescription="@string/back_to_login" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:layout_gravity="center_horizontal"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_register"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        app:helperTextTextColor="@color/md_blue_500"
        app:boxStrokeColor="@color/md_blue_500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nama_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:inputType="text"
            android:hint="@string/nama" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        app:helperTextTextColor="@color/md_blue_500"
        app:boxStrokeColor="@color/md_blue_500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:helperTextTextColor="@color/md_blue_500"
        app:boxStrokeColor="@color/md_blue_500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nomorhp_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:inputType="number"
            android:hint="@string/phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        app:helperTextTextColor="@color/md_blue_500"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/md_blue_500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        app:helperTextTextColor="@color/md_blue_500"
        app:boxStrokeColor="@color/md_blue_500"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confpw_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:hint="@string/konfirmasi_kata_sandi" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit_register"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/button_blue_login"
        app:layout_constraintTop_toBottomOf="@id/til_password_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="25dp"
        android:text="@string/register" />

</LinearLayout>